--- a/wally.toml
+++ b/wally.toml
@@ -8,3 +8,7 @@ registry = "https://github.com/upliftgames/wally-index"
 exclude = ["Packages", ".vscode"]
 
 [dependencies]
+Option = "nightcycle/option@^0"
+Result = "nightcycle/result@^0"
+Error = "nightcycle/error@^0"
+Vec = "nightcycle/vec@^0"
